--- a/src/app/app.module.css
+++ b/src/app/app.module.css
@@ -1,1 +1,9 @@
 /* Your styles goes here. */
+
+.app {
+    font-size: 14px;
+    color: #333;
+    padding: 0;
+    max-width: 600px;
+    margin: 2rem auto;
+}
