--- a/src/app/components/accrodion-item/accrodion-item.module.css
+++ b/src/app/components/accrodion-item/accrodion-item.module.css
@@ -5,3 +5,91 @@
  * .container {
  * }
 */
+
+.title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+}
+
+.inner-title {
+    display: flex;
+    align-items: center;
+
+}
+
+.inner-title img {
+    border-radius: 50%;
+    margin-right: 1rem;
+    border: 1px solid #e2e2e3;
+}
+
+.accordian-content {
+    margin-top: 1rem;
+}
+
+.symbol {
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-right: 1rem;
+    color: #707070;
+}
+
+.accordion-content{
+    margin-top: 1rem;
+    color: #707070;
+}
+
+.accordion-subtitle{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.accordion-content-value{
+    font-weight: 500;
+    color: black;
+}
+
+.accordion-content-title{
+    margin-bottom: .5rem;
+    display: block;
+}
+
+.accordion-footer{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 1rem;
+}
+
+.modal-footer{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 2.5rem;
+}
+
+.modal-footer button{
+    margin-left: 1rem;
+    padding: .75rem 2rem;
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 8px;
+}
+
+.modal-title{
+    display: flex;
+    justify-content: space-between;
+}
+
+.cancel{
+    border: 1px solid #b9b9b9;
+}
+
+.delete{
+    background-color: #f44336;
+    color: white;
+    border: 1px solid #f44336;
+}
