--- a/src/styles.css
+++ b/src/styles.css
@@ -6,5 +6,17 @@
 }
 
 body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: sans-serif;
+}
+
+input, textarea, select{
+    padding: 8px;
+    border: 1px solid #e2e2e2;
+    background-color: white;
+    border-radius: 8px;
+}
+
+button{
+    background-color: white;
+    border: none;
 }
